Layout fix for subscription table on safari mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -786,6 +786,13 @@ label {
     white-space: nowrap;
 }
 
+#answerTable {
+    table-layout: fixed;
+    max-width: 100%;
+    width: 100%;
+    min-width: 100%;
+}
+
 /* --Profile */
 .profileTable table {
     border: 1px solid black;
